--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <h1>this is a headding for feature 2</h1>
 <h1>this is a headding for feature 2</h1>
+<h2>this is h2 in feature1 <button>up</button></h2>
 <h2>this is h2 in feature1 <button>down</button></h2>
